<resources>
    <string name="app_name">arcgis</string>
    <string name="login_success">login success</string>
    <string name="login">登陆</string>
    <string name="Username">用户名</string>
    <string name="Password">密码</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">登陆</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>

    <string name="action_settings">Settings</string>
    <string name="can_not_find_version_name">找不到版本号</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
</resources>
