<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Rel_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/Rel_tot"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#005757"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="欢迎使用电网图片管理系统"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="200dp">

        <android.support.v7.widget.CardView
            android:id="@+id/cv"
            android:layout_width="500dp"
            android:layout_height="400dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="100dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp">

                    <View
                        android:layout_width="8dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:background="#2fa881" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50dp"
                        android:text="@string/login"
                        android:textColor="#FFCC00"
                        android:textSize="25dp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Username"
                        android:textSize="18dp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#c5c5c5">

                        <EditText
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_bg_edit"
                            android:inputType="textPersonName"
                            android:paddingBottom="2dp"
                            android:textColor="#2fa881"
                            android:textCursorDrawable="@drawable/bg_input_cursor"
                            android:textSize="22sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Password"
                        android:textSize="18dp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#c5c5c5">

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_bg_edit"
                            android:inputType="textPassword"
                            android:paddingBottom="2dp"
                            android:textColor="#2fa881"
                            android:textCursorDrawable="@drawable/bg_input_cursor"
                            android:textSize="22sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="25dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/bt_go"
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:background="@drawable/bt_shape"
                        android:stateListAnimator="@drawable/state_list_animator_z"
                        android:text="@string/go"
                        android:textColor="#d3d3d3"></Button>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/forgot_your_password"
                    android:textColor="#9a9a9a"
                    android:textSize="12sp"
                    android:visibility="gone" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</RelativeLayout>
